feat: add support for trusted idents
