# src/presentation/kmc/controllers/dtos/update-ident.dto.ts
@@ -1,0 +1,7 @@
+import { IsBoolean, IsOptional } from 'class-validator';
+
+export class UpdateIdentDto {
+  @IsOptional()
+  @IsBoolean()
+  public trusted?: boolean;
+}
