# src/presentation/kmc/controllers/filter.ts
@@ -11,4 +11,29 @@ export class RsqlToMongoKmcCvmTransformer extends RsqlToMongoCvmTransformer {
   }
 }
 
-export class RsqlToMongoKmcIdentTransformer extends RsqlToMongoIdentTransformer {}
+export class RsqlToMongoKmcIdentTransformer extends RsqlToMongoIdentTransformer {
+  protected isSupported(field: string, operator: string) {
+    if (field === 'trusted' && (operator === '==' || operator === '!=')) {
+      return true;
+    }
+
+    return super.isSupported(field, operator);
+  }
+
+  protected transformExpression(
+    selector: string,
+    operator: string,
+    value: string | string[] | number,
+  ): object {
+    if (selector === 'trusted') {
+      const boolValue = value === 'true';
+      return super.transformExpression(
+        selector,
+        operator,
+        boolValue as unknown as string,
+      );
+    }
+
+    return super.transformExpression(selector, operator, value);
+  }
+}
